fixed whitespace issue in the footer element with flex-grow: 1

--- a/Project/styling/login.css
+++ b/Project/styling/login.css
@@ -38,7 +38,7 @@ body {
 
 .login-background {
   display: flex;
-  height: 70vh;
+  height: 80%;
   margin: auto;
   margin-top: 3rem;
   margin-bottom: 3rem;
