--- a/Project/styling/nav.css
+++ b/Project/styling/nav.css
@@ -20,6 +20,18 @@
   --lotus-flower: rgba(245, 245, 245, 0.9);
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+}
+
 /*#region Navigation bar */
 
 .nav-content {
@@ -110,10 +122,25 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
+button.login {
+  background-color: var(--sushi-red4);
+  color: var(--lotus-flower);
+}
+
+button.login a {
+  color: var(--lotus-flower);
+  text-decoration: none;
+}
+
+button.login:hover {
+  background-color: var(--sushi-red3);
+}
+
 .language:hover,
 .login:hover {
   background-color: var(--sushi-red4);
   transform: scale(1.05);
+  cursor: pointer;
 }
 
 /* Hamburger menu for mobile */
@@ -136,9 +163,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
   width: 100%;
   margin-bottom: 0;
+  position: relative;
 }
 
 .footer-container {
